fix hero button on mobile

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -55,11 +55,17 @@ main .hero img {
 
 main .hero .button-container {
   display: flex;
-  gap: 50px;
+  flex-direction: column;
+  gap: 10px;
   margin-top: 30px;
 }
 
+main .hero .button-container > * {
+  max-width: 250px;
+}
+
 main .hero a.button {
+  width: 100%;
   font-size: var(--hero-button-font-size);
 }
 
@@ -102,8 +108,13 @@ body.blogpost main .hero p {
 }
 
 @media (min-width: 992px) {
+  main .hero a.button {
+    width: unset;
+  }
+
   main .hero .button-container {
     display: flex;
     gap: 50px;
+    flex-direction: row;
   }
 }
